@@ -124,6 +124,8 @@ Version 1.3.1+svn:
    * New tool, macroscope, generates cross-reference reports on macro usage.
    * The old find-unused-images and find-unused-sounds scripts are deleted
      (replaced by macroscope).
+   * New tool upconvert handles converting maps and resource file names 
+     between versions.  It replaces map_convert.pl, which is now gone.
    * New tool to create the unit tree in html, as used for units.wesnoth.org
      (written by elricz)
  * miscellanous changes and bug fixes
